# CUDAMatata

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
benchmarks/: run_bench.sh
docs/: profiling.md
src/: gemm.cu  main.cpp  util.cpp  util.h
tests/: correctness_test.py
